--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         />
         <span id="board-text">Board Color</span>
       </p>
-      <input type="button" id="eraser" value="Eraser" />
-      <input type="button" id="rainbow" value="Rainbow" />
-      <input type="button" id="black" value="Black" />
-      <input type="button" id="gray" value="gray" />
-      <input type="button" id="clear-grid" value="clear grid lines" />
-      <input type="button" id="clear" value="clear" />
+      <input type="button" class="btn" id="eraser" value="Eraser" />
+      <input type="button" class="btn" id="rainbow" value="Rainbow" />
+      <input type="button" class="btn" id="black" value="Black" />
+      <input type="button" class="btn" id="gray" value="gray" />
+      <input type="button" class="btn" id="clear-grid" value="Grid Lines" />
+      <input type="button" class="btn" id="clear" value="clear" />
 
       <div class="range">
         <input
@@ -48,7 +48,7 @@
           id="grid-range"
         />
         <p>
-          Grid Size : <span class="grid-size">16</span> x
+          Grid : <span class="grid-size">16</span> x
           <span class="grid-size">16</span>
         </p>
       </div>
